--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,10 @@
 			<id>maven-central</id>
 			<url>http://repo1.maven.org/maven2/</url>
 		</repository>
+		<repository>
+            <id>Plugin Metrics</id>
+            <url>http://repo.mcstats.org/content/repositories/public</url>
+        </repository>
 	</repositories>
 
 	<dependencies>
